kustomize/pihole/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.kgb.birtdata.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: pihole-web
          port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.kgb.birtdata.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: pihole-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-ingressroutetcp
  namespace: pihole-system
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: 53
