kustomize/pihole/local-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-local-websecure-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/pihole`)
      kind: Rule
      middlewares:
        - name: strip-pihole-prefix
          namespace: pihole-system
      services:
        - name: pihole-web
          port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-local-web-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/pihole`)
      kind: Rule
      middlewares:
        - name: strip-pihole-prefix
          namespace: pihole-system
      services:
        - name: pihole-web
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-pihole-prefix
  namespace: pihole-system
spec:
  stripPrefix:
    prefixes:
      - /pihole
