kustomize/pihole/traefik-config.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.kgb.birtdata.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-web-ingressroute
  namespace: pihole-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.kgb.birtdata.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
